--- a/BlogEngine/BlogEngine.Client/Shared/ConfirmationModal.razor
+++ b/BlogEngine/BlogEngine.Client/Shared/ConfirmationModal.razor
@@ -23,11 +23,14 @@
                     @ModalBodyTemplate
                 </div>
                 <div class="modal-footer">
-                    @if (!ConfirmOnly)
+                    @if (!WithoutButtons)
                     {
-                        <button disabled="@_actionsDisabled" @onclick="Cancel" class="btn btn-secondary">Cancel</button>
+                        @if (!ConfirmOnly)
+                        {
+                            <button disabled="@_actionsDisabled" @onclick="Cancel" class="btn btn-secondary">Cancel</button>
+                        }
+                        <button disabled="@_actionsDisabled" @onclick="OnConfirmButtonClicked" class="btn btn-primary">Confirm</button>
                     }
-                    <button disabled="@_actionsDisabled" @onclick="OnConfirmButtonClicked" class="btn btn-primary">Confirm</button>
                 </div>
             </div>
         </div>
@@ -41,6 +44,7 @@
     [Parameter] public string ModalTitle { get; set; } = "Confirm";
     [Parameter] public bool Centered { get; set; } = false;
     [Parameter] public bool ConfirmOnly { get; set; } = false;
+    [Parameter] public bool WithoutButtons { get; set; } = false;
     [Parameter] public RenderFragment ModalBodyTemplate { get; set; }
     [Parameter] public EventCallback Confirm { get; set; }
     [Parameter] public EventCallback Cancel { get; set; }
