Added Twitter share button

--- a/BlogEngine/BlogEngine.Client/Pages/Blog/ViewBlog.razor
+++ b/BlogEngine/BlogEngine.Client/Pages/Blog/ViewBlog.razor
@@ -69,6 +69,8 @@ else
         }
     </div>
 
+    <TwitterShareButton Text="@($"Sharing article '{_blogDTO.Title}'. ")" Size="Large" />
+
     <hr>
 
     <!-- Comments -->
