--- a/BlogEngine/BlogEngine.Client/_Imports.razor
+++ b/BlogEngine/BlogEngine.Client/_Imports.razor
@@ -37,3 +37,4 @@
 @using BlogEngine.ClientServices.Common.Extensions
 @using BlogEngine.ClientServices.Common.Endpoints
 @using BlogEngine.ClientServices.Common.Models
+@using Toolbelt.Blazor.TwitterShareButton
