Added website review feature for customers

--- a/BlogEngine/BlogEngine.Client/Pages/Account/UserPersonalPage.razor
+++ b/BlogEngine/BlogEngine.Client/Pages/Account/UserPersonalPage.razor
@@ -30,6 +30,7 @@ else
             <AuthorizeView Roles="@UserRole.Admin">
                 <Authorized>
                     <a class="my-2 btn btn-primary" href="accounts/manage">Manage Accounts</a>
+                    <a class="my-2 btn btn-primary" href="customerreviews/view">Check Customer Reviews</a>
                 </Authorized>
             </AuthorizeView>
         </div>
