--- a/BlogEngine/BlogEngine.Client/_Imports.razor
+++ b/BlogEngine/BlogEngine.Client/_Imports.razor
@@ -26,6 +26,7 @@
 @using BlogEngine.Client.Shared.Comment
 @using BlogEngine.Client.Shared.Category
 @using BlogEngine.Client.Shared.Account
+@using BlogEngine.Client.Shared.CustomerReview
 @using BlogEngine.Shared
 @using BlogEngine.Shared.DTOs
 @using BlogEngine.Shared.DTOs.Blog
@@ -33,6 +34,7 @@
 @using BlogEngine.Shared.DTOs.Comment
 @using BlogEngine.Shared.DTOs.Identity
 @using BlogEngine.Shared.DTOs.Notification
+@using BlogEngine.Shared.DTOs.CustomerReview
 @using BlogEngine.Shared.Helpers
 @using BlogEngine.ClientServices.Common.Extensions
 @using BlogEngine.ClientServices.Common.Endpoints
