--- a/BlogEngine/BlogEngine.Client/Shared/Navigation.razor
+++ b/BlogEngine/BlogEngine.Client/Shared/Navigation.razor
@@ -12,6 +12,10 @@
                 </li>
 
                 <li class="nav-item active">
+                    <a class="nav-link" href="about">About</a>
+                </li>
+
+                <li class="nav-item active">
                     <a class="nav-link" href="account/profiles">All Profiles</a>
                 </li>
 
