--- a/BlogEngine/BlogEngine.Client/Pages/Account/ViewProfile.razor
+++ b/BlogEngine/BlogEngine.Client/Pages/Account/ViewProfile.razor
@@ -9,38 +9,49 @@
 }
 else
 {
-    <h3 class="mt-3">First Name: @_userProfileDTO.FirstName</h3>
-    <h3>Last Name: @_userProfileDTO.LastName</h3>
-    <span class="badge rounded-pill bg-success">Member</span>
-    @if (_userProfileDTO.Roles.Any())
-    {
-        foreach (var role in _userProfileDTO.Roles)
+    <div class="text-center">
+        @if (_userProfileDTO.ProfilePicture is null)
         {
-            <span class="badge rounded-pill bg-success">@role</span>
-        }
-    }
-
-    <br>
-
-    @if (articlesLoaded)
-    {
-        @if (_blogDTOs == null)
-        {
-            <Loading />
-        }
-        else if (!_blogDTOs.Any())
-        {
-            <h3>Articles not available</h3>
+            <img class="user-profile-picture my-3" style="width: 300px; height:300px;"
+                 src="css/Images/user_template_128px.png" alt="user icon">
         }
         else
         {
-            <BlogPostList BlogDTOs="_blogDTOs" />
+            <img class="user-profile-picture my-3" style="width: 300px; height:300px;"
+                 src="data:image/jpeg;base64,@(Convert.ToBase64String(_userProfileDTO.ProfilePicture))">
         }
-    }
-    else
-    {
-        <a @onclick="LoadArticles" class="mt-2 btn btn-primary">Load all articles by @_userProfileDTO.FirstName</a>
-    }
+        <h3>First Name: @_userProfileDTO.FullName</h3>
+        <span class="badge rounded-pill bg-success">Member</span>
+        @if (_userProfileDTO.Roles.Any())
+        {
+            foreach (var role in _userProfileDTO.Roles)
+            {
+                <span class="badge rounded-pill bg-success">@role</span>
+            }
+        }
+
+        <br>
+
+        @if (articlesLoaded)
+        {
+            @if (_blogDTOs == null)
+            {
+                <Loading />
+            }
+            else if (!_blogDTOs.Any())
+            {
+                <h3>Articles not available</h3>
+            }
+            else
+            {
+                <BlogPostList BlogDTOs="_blogDTOs" />
+            }
+        }
+        else
+        {
+            <a @onclick="LoadArticles" class="mt-2 btn btn-primary">Load all articles by @_userProfileDTO.FirstName</a>
+        }
+    </div>
 }
 
 @code {
