--- a/BlogEngine/BlogEngine.Client/Shared/Navigation.razor
+++ b/BlogEngine/BlogEngine.Client/Shared/Navigation.razor
@@ -19,6 +19,10 @@
                     <a class="nav-link" href="account/profiles">All Profiles</a>
                 </li>
 
+                <li class="nav-item active">
+                    <a class="nav-link" href="notificationReceiver/create">Subscribe For Notifications</a>
+                </li>
+
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="blog-dropdown" data-toggle="dropdown"
                        aria-expanded="false">Blog</a>
@@ -33,23 +37,15 @@
                     <a class="nav-link dropdown-toggle" href="#" id="category-dropdown" data-toggle="dropdown"
                        aria-expanded="false">Category</a>
                     <ul class="dropdown-menu" aria-labelledby="category-dropdown">
-                        <li><a class="dropdown-item" href="category/create">Create</a></li>
                         <li><a class="dropdown-item" href="category/manage">All Categories</a></li>
-                    </ul>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="subscribe-dropdown" data-toggle="dropdown"
-                       aria-expanded="false">Notifications</a>
-                    <ul class="dropdown-menu" aria-labelledby="subscribe-dropdown">
-                        <li><a class="dropdown-item" href="notificationReceiver/create">Subscribe</a></li>
-                        <li><a class="dropdown-item" href="notificationReceivers/manage">Manage</a></li>
+                        <li><a class="dropdown-item" href="category/search">Search Page</a></li>
                     </ul>
                 </li>
             </ul>
             <div class="d-flex align-items-center flex-row">
                 <AuthorizeView>
                     <Authorized Context="authState">
-                        <p class="my-0 mr-2">Hello <a href="account/personal">@authState.User.Identity.Name</a></p>
+                        <a class="my-0 mr-2 btn btn-outline-success btn-sm" href="account/personal">@authState.User.Identity.Name's Personal Page</a>
                         <a class="btn btn-outline-primary btn-sm" href="account/logout">Log out</a>
                     </Authorized>
                     <NotAuthorized>
